Do not check environment variables on UWP

--- a/rcl/CMakeLists.txt
+++ b/rcl/CMakeLists.txt
@@ -49,7 +49,6 @@ set(${PROJECT_NAME}_sources
   src/rcl/node_options.c
   src/rcl/publisher.c
   src/rcl/remap.c
-  src/rcl/rmw_implementation_identifier_check.c
   src/rcl/service.c
   src/rcl/subscription.c
   src/rcl/time.c
@@ -58,6 +57,10 @@ set(${PROJECT_NAME}_sources
   src/rcl/wait.c
   src/rcl/security_directory.c
 )
+
+if(NOT CMAKE_SYSTEM_NAME STREQUAL "WindowsStore")
+  list(APPEND ${PROJECT_NAME}_source src/rcl/rmw_implementation_identifier_check.c)
+endif()
 
 add_library(${PROJECT_NAME} ${${PROJECT_NAME}_sources})
 # specific order: dependents before dependencies
